# pysaurus

./: .gitignore  Dockerfile  README.md  git.sh  new_repo.sh  package.json  setup.cfg
env/: pyvenv.cfg
src/pysaurus/: synonyms.py  thesaurus.py
src/pysaurus/app/: __init__.py  main.py
src/pysaurus/command/: main.py
src/pysaurus/data/: wordlist_0_1_0.py
src/pysaurus/data/thesauri/: a.json  b.json  d.json  h.json  k.json  l.json  m.json  q.json  s.json  u.json  v.json
src/pysaurus/data/thesauri/0_1_0/: c.json  e.json  f.json  g.json  i.json  j.json  n.json  o.json  p.json  r.json  t.json  w.json  x.json  y.json
src/tests/: TESTING.md
src/tests/synonyms/: test_faulty_input.py  test_input_errors.py  test_nonwords.py
