[metadata]
name = pysaurus
version = 0.1.0
author = Paul Tuck
author_email = pau1tuck@outlook.com
description = A sophisticated English thesaurus with synonyms, antonymns, and word proximity readings.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pau1tuck/pysaurus
project_urls =
    Bug Tracker = package issues url
classifiers =
    Programming Language :: Python :: 3
    License :: MIT License
    Operating System :: OS Independent

[options]
package_dir = src/pysaurus
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src